# audacity_labels_reformat

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
libs/: string_parse.cpp  string_parse.hpp  substring.cpp  substring.hpp  time_hms.cpp  time_hms.hpp
